--- a/weather.css
+++ b/weather.css
@@ -7,4 +7,9 @@ body{
     max-width: 400px;
   } 
  
-  
+  .icon{
+    position: relative;
+    top: -50px;
+    border-radius: 50%;
+    width: 100px;
+    margin-bottom: -50px;}
